--- a/style.css
+++ b/style.css
@@ -95,11 +95,23 @@ section{
       width: 24px;
       left: 4px;
       bottom: 4px;
-      background-color: white;
-      transition: 0.4s;
+      /* background-color: white; */
+      transition: transform 0.4s, background-image 0.4s;
       border-radius: 50%;
+      background-size: cover;
+      background-position: center;
+      animation: none;
+      background-image: var(--icon-url);
     }
 
+    /* .slider.animate-icon:before{
+        animation: spin 0.6s ease;
+    }
+    @keyframes spin{
+        0%{
+            transform: rotate(0deg) scale();
+        }
+    } */
     input:checked + .slider {
       background-color: #333333;
     }
@@ -108,37 +120,9 @@ section{
       transform: translateX(28px);
     }
 
-.theme-animation {
-      position: fixed;
-      top: 50%;
-      left: 50%;
-      width: 200px;
-      height: 200px;
-      transform: translate(-50%, -50%) scale(0.5);
-      opacity: 0;
-      animation: themePop 1s ease forwards;
-      pointer-events: none;
-      z-index: 999;
-    }
 
-    @keyframes themePop {
-      0% {
-        transform: translate(-50%, -50%) scale(0.5);
-        opacity: 0;
-      }
-      30% {
-        opacity: 1;
-        transform: translate(-50%, -50%) scale(1.2);
-      }
-      60% {
-        transform: translate(-50%, -50%) scale(1);
-        opacity: 1;
-      }
-      100% {
-        transform: translate(-50%, -50%) scale(1.5);
-        opacity: 0;
-      }
-    }
+
+
 #header{
     position: fixed;
     z-index: 999;
