--- a/style.css
+++ b/style.css
@@ -35,6 +35,7 @@ html, body {
    font-size: 1rem;
    overflow-x: hidden;
    background-color: var(--bg-color);
+   scroll-behavior: smooth;
 }
 a{
     text-decoration: none;
