--- a/style.css
+++ b/style.css
@@ -266,9 +266,26 @@ section{
     cursor: pointer;
     background: linear-gradient(45deg, rgb(255, 87, 87), rgb(255, 192, 67)) text;
     -webkit-text-fill-color: transparent;
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    background-size: 300% 300%;
     display: inline-block;
     transition: transform 0.3s ease;
+    animation: wave 3s ease-in-out infinite;
+    text-shadow: 0 0 10px rgb(255, 87, 87), rgb(255, 192, 67);
 }
+@keyframes wave {
+      0% {
+        background-position: 0% 50%;
+      }
+      50% {
+        background-position: 100% 50%;
+      }
+      100% {
+        background-position: 0% 50%;
+      }
+    }
 .home-subtittle{
     color: #f5ebe0;
     font-size: 16px;
